--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "start:dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "async": "^2.0.1",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "hbs": "~4.0.0",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "watson-developer-cloud": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.10.0"
