--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "hbs": "~4.0.0",
+    "html-to-text": "^2.1.3",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
     "watson-developer-cloud": "^2.0.0"
